:see_no_evil: :: Add .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -222,3 +222,5 @@ fabric.properties
 !/gradle/wrapper/gradle-wrapper.jar
 
 # End of https://www.toptal.com/developers/gitignore/api/androidstudio,windows,macos,android
+
+core/design-system/src/main/res/values/expo_app_key.xml
