--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -26,7 +26,7 @@ androidx-test-ext-junit = "1.2.1"
 androidxWearCompose = "1.4.0"
 androidxWindowManager = "1.3.0"
 camera = "1.4.0"
-cameraRc = "1.3.0-beta01-rc01@aar"
+cameraRc = "1.4.0"
 coil = "2.4.0"
 converter-moshi = "2.9.0"
 firebaseAnalytics = "21.6.2"
