--- a/.github/workflows/expo_ci.yml
+++ b/.github/workflows/expo_ci.yml
@@ -50,7 +50,7 @@ jobs:
           title: ✅ Expo-Android-CI Success! ✅
           webhook: ${{ secrets.DISCORD_WEBHOOK }}
           status: ${{ job.status }}
-          content: "<@${{ secrets.ID1 }}> <@${{ secrets.ID2 }}> CI 성공하였습니다. 확인부탁드립니다."
+          content: "@${{ secrets.ID1 }} @${{ secrets.ID2 }} CI 성공하였습니다. 확인부탁드립니다."
           image: ${{ secrets.SUCCESS_IMAGE }}
           description: 뀨
           color: 65280
