--- a/.github/workflows/expo_ci.yml
+++ b/.github/workflows/expo_ci.yml
@@ -51,7 +51,8 @@ jobs:
           webhook: ${{ secrets.DISCORD_WEBHOOK }}
           status: ${{ job.status }}
           image: ${{ secrets.SUCCESS_IMAGE }}
-          description: "<@${{ secrets.ID1 }}> <@${{ secrets.ID2 }}>"
+          content: "<@${{ secrets.ID1 }}> <@${{ secrets.ID2 }}> 성공! 확인부탁드립니다...!!!."
+          description: 뀨
           color: 65280
           url: "https://github.com/sarisia/actions-status-discord"
           username: Expo-CI Bot
