--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -43,6 +43,7 @@ inAppUpdate = "2.1.0"
 junit4 = "4.13.2"
 junit = "4.13.2"
 kotlin = "1.8.10"
+kotlinxCollectionsImmutable = "0.3.7"
 kotlinxCoroutines = "1.7.1"
 kotlinxCoroutinesCore = "1.8.1"
 kotlinxCoroutinesPlayServices = "1.7.3"
@@ -131,6 +132,7 @@ hilt-ext-compiler = { group = "androidx.hilt", name = "hilt-compiler", version.r
 hilt-ext-work = { group = "androidx.hilt", name = "hilt-work", version.ref = "hiltExt" }
 app-update-ktx = { group = "com.google.android.play", name = "app-update-ktx", version.ref = "inAppUpdate"}
 kotlin-stdlib = { group = "org.jetbrains.kotlin", name = "kotlin-stdlib-jdk8", version.ref = "kotlin" }
+kotlinx-collections-immutable-v037 = { module = "org.jetbrains.kotlinx:kotlinx-collections-immutable", version.ref = "kotlinxCollectionsImmutable" }
 kotlinx-coroutines-android = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-android", version.ref = "kotlinxCoroutines" }
 kotlinx-coroutines-core = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "kotlinxCoroutines" }
 kotlinx-coroutines-guava = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-guava", version.ref = "kotlinxCoroutines" }
