--- a/.github/workflows/expo_cd.yml
+++ b/.github/workflows/expo_cd.yml
@@ -65,7 +65,7 @@ jobs:
         uses: r0adkll/upload-google-play@v1
         with:
           serviceAccountJson: service_account.json
-          packageName: com.msg.sms_android
+          packageName: com.school_of_company.expo_android
           releaseFiles: app/build/outputs/bundle/release/app-release.aab
           track: beta
 
