:memo: :: Refactor Discord Webhook Detail: use text-based formatting instead of emojis

--- a/.github/workflows/expo_cd.yml
+++ b/.github/workflows/expo_cd.yml
@@ -9,9 +9,17 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Record start time
+        run: echo "START_TIME=$(date +%s)" >> $GITHUB_ENV
+
       - uses: actions/checkout@v4
         with:
           fetch-depth: 1
+
+      - name: Get commit info
+        run: |
+          echo "COMMIT_HASH=${GITHUB_SHA:0:8}" >> $GITHUB_ENV
+          echo "COMMIT_MSG=$(git log -1 --pretty=format:'%s')" >> $GITHUB_ENV
 
       - name: Gradle caching
         uses: actions/cache@v4
@@ -46,6 +54,19 @@ jobs:
       - name: Assemble Release Bundle
         run: ./gradlew bundleRelease --no-daemon
 
+      - name: Get bundle info
+        run: |
+          if [ -f "app/build/outputs/bundle/release/app-release.aab" ]; then
+            BUNDLE_SIZE=$(du -h "app/build/outputs/bundle/release/app-release.aab" | cut -f1)
+            echo "BUNDLE_SIZE=${BUNDLE_SIZE}" >> $GITHUB_ENV
+          else
+            echo "BUNDLE_SIZE=빌드 실패" >> $GITHUB_ENV
+          fi
+          
+          END_TIME=$(date +%s)
+          BUILD_TIME=$((END_TIME - START_TIME))
+          echo "BUILD_TIME=${BUILD_TIME}초" >> $GITHUB_ENV
+
       - name: Sign Release
         uses: r0adkll/sign-android-release@v1
         with:
@@ -76,11 +97,15 @@ jobs:
           title: CD 성공~
           webhook: ${{ secrets.DISCORD_WEBHOOK }}
           status: ${{ job.status }}
-          image: ${{ secrets.SUCCESS_IMAGE }}
-          description: 뀨
+          description: |
+            버전: v1.2.3
+            빌드 시간: ${{ env.BUILD_TIME }}
+            용량: ${{ env.BUNDLE_SIZE }}
+            커밋: "${{ env.COMMIT_MSG }}" (${{ env.COMMIT_HASH }})
+            링크: [Play Console](https://play.google.com/console/developers) | [로그 보기](${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }})
           color: 65280
-          url: "https://github.com/sarisia/actions-status-discord"
-          username: Android-CD Bot
+          url: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}
+          username: Expo-CD Bot
 
       - name: Android CD Discord Notification (Fail)
         uses: sarisia/actions-status-discord@v1
@@ -89,8 +114,10 @@ jobs:
           title: CD 실패~
           webhook: ${{ secrets.DISCORD_WEBHOOK }}
           status: ${{ job.status }}
-          image: ${{ secrets.FAILED_IMAGE }}
-          description: 뀨...
+          description: |
+            커밋: "${{ env.COMMIT_MSG }}" (${{ env.COMMIT_HASH }})
+            소요 시간: ${{ env.BUILD_TIME }}
+            링크: [로그 확인하기](${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }})
           color: 16711680
-          url: "https://github.com/sarisia/actions-status-discord"
-          username: Android-CD Bot
+          url: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}
+          username: Expo-CD Bot
