--- a/.github/workflows/expo_cd.yml
+++ b/.github/workflows/expo_cd.yml
@@ -82,13 +82,13 @@ jobs:
           name: app-release
           path: app/build/outputs/bundle/release/app-release.aab
 
-      - name: Deploy to Google Play (Beta)
+      - name: Deploy to Google Play (Production)
         uses: r0adkll/upload-google-play@v1
         with:
           serviceAccountJson: service_account.json
           packageName: com.school_of_company.expo_android
           releaseFiles: app/build/outputs/bundle/release/app-release.aab
-          track: beta
+          track: production
 
       - name: Android CD Discord Notification (Success)
         uses: sarisia/actions-status-discord@v1
